--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
+    "colors": "^1.3.3",
+    "commander": "^3.0.0",
     "husky": "^3.0.4",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "superagent": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
