--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "husky": "^3.0.4",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "query-string": "^6.8.2",
     "react-scripts": "3.1.1",
     "superagent": "^5.1.0"
   },
