--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
     "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
     "colors": "^1.3.3",
