--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/bbox": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
     "lodash": "^4.17.15",
+    "mapbox-gl": "^1.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1"
   },
