--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0",
     "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1"
