--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
+    "react-lines-ellipsis": "^0.14.1",
     "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1"
