--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@turf/bbox": "^6.0.1",
     "@turf/helpers": "^6.1.4",
+    "@vx/axis": "^0.0.191",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
     "classnames": "^2.2.6",
+    "d3-array": "^2.3.1",
+    "d3-scale": "^3.1.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.12.0",
