--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@turf/bbox": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@vx/axis": "^0.0.191",
+    "@vx/text": "^0.0.191",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
