--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "camelcase": "^5.3.1",
     "classnames": "^2.2.6",
     "d3-array": "^2.3.1",
+    "d3-hierarchy": "^1.1.8",
     "d3-scale": "^3.1.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
@@ -22,6 +23,7 @@
     "react-lines-ellipsis": "^0.14.1",
     "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
+    "react-use-dimensions": "^1.2.1",
     "reactstrap": "^8.0.1"
   },
   "devDependencies": {
