--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-mapbox-gl": "^4.6.0",
     "react-router-dom": "^5.0.1",
     "react-use-dimensions": "^1.2.1",
+    "react-waypoint": "^9.0.2",
     "reactstrap": "^8.0.1"
   },
   "devDependencies": {
