--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "campscapes",
   "version": "0.1.0",
+  "homepage": "https://calibro.github.io/campscapes",
   "private": true,
   "dependencies": {
     "@turf/bbox": "^6.0.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "colors": "^1.3.3",
     "commander": "^3.0.0",
+    "gh-pages": "^2.1.1",
     "husky": "^3.0.4",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
@@ -38,6 +40,8 @@
     "superagent": "^5.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
