--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hammerjs": "^1.0.1",
     "react-icons": "^3.7.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-mapbox-gl": "^4.6.0",
