--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^3.7.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-mapbox-gl": "^4.6.0",
+    "react-pdf": "^4.1.0",
     "react-player": "^1.13.0",
     "react-router-dom": "^5.0.1",
     "react-use-dimensions": "^1.2.1",
