--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-array": "^2.3.1",
     "d3-hierarchy": "^1.1.8",
     "d3-scale": "^3.1.0",
+    "graphology": "^0.14.1",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.12.0",
