--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://calibro.github.io/campscapes",
   "private": true,
   "dependencies": {
+    "@dschoon/react-waves": "^1.0.15",
     "@turf/bbox": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@vx/axis": "^0.0.191",
@@ -17,6 +18,7 @@
     "d3-hierarchy": "^1.1.8",
     "d3-scale": "^3.1.0",
     "graphology": "^0.14.1",
+    "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.12.0",
