--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
+    "markdown-to-jsx": "^6.10.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
