--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphology": "^0.14.1",
     "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.15",
+    "magik-react-hooks": "^1.0.2",
     "mapbox-gl": "^1.3.1",
     "markdown-to-jsx": "^6.10.3",
     "node-sass": "^4.12.0",
