--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
+    "citation-js": "^0.5.0-alpha.4",
     "classnames": "^2.2.6",
     "d3-array": "^2.3.1",
     "d3-force": "^2.0.1",
