--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@turf/bbox": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@vx/axis": "^0.0.191",
-    "@vx/text": "^0.0.191",
+    "@vx/text": "^0.0.192",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "camelcase": "^5.3.1",
@@ -28,7 +28,6 @@
     "markdown-to-jsx": "^6.10.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
-    "react-d3-graph": "^2.3.0",
     "react-dom": "^16.9.0",
     "react-hammerjs": "^1.0.1",
     "react-icons": "^3.7.0",
@@ -39,7 +38,9 @@
     "react-router-dom": "^5.0.1",
     "react-spring": "^8.0.27",
     "react-use-dimensions": "^1.2.1",
+    "react-vis-force": "^0.3.1",
     "react-waypoint": "^9.0.2",
+    "reactochart": "^2.0.2",
     "reactstrap": "^8.0.1"
   },
   "devDependencies": {
